fix spacing footer

--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,13 @@
 		width: 0%;
 	}
 }
+
+
+@layer utilities {
+	.line-clamp-2 {
+		overflow: hidden;
+		display: -webkit-box;
+		-webkit-box-orient: vertical;
+		-webkit-line-clamp: 2;
+	}
+}
